# git-squared

./: README.md  pyproject.toml
src/gg/: branch.py  commit.py  config.py  confirm.py  exception.py  github.py  log.py  ls.py  main.py  pr.py  repo.py  restack.py  submit.py  tree.py
